--- a/Assets/Css/index.css
+++ b/Assets/Css/index.css
@@ -1793,7 +1793,7 @@ h2 {
     height: 100%;
   }
   .bangle12 {
-    background-color: #832729;
+    /* background-color: #832729; */
     width: 60%;
     height: 60%;
     position: absolute;
