--- a/Assets/Css/index.css
+++ b/Assets/Css/index.css
@@ -1793,7 +1793,7 @@ h2 {
     height: 100%;
   }
   .bangle12 {
-    /* background-color: #832729; */
+    /* background-color: aqua; */
     width: 60%;
     height: 60%;
     position: absolute;
@@ -2797,7 +2797,7 @@ h2 {
   .chain {
     width: 100%;
     height: 100%;
-    background-color: #832729;
+    /* background-color: #832729; */
     background-image: url(/project/Assets/Images/chain.jpg);
     background-position: center;
     background-size: cover;
@@ -3061,7 +3061,7 @@ h2 {
     height: 100%;
   }
   .bangle12 {
-    background-color: #832729;
+    /* background-color: #832729; */
     width: 60%;
     height: 60%;
     position: absolute;
