--- a/Assets/Css/index.css
+++ b/Assets/Css/index.css
@@ -2791,18 +2791,18 @@ h2 {
   }
   .ch {
     width: auto;
-    height: 300px;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background-color: aqua;
+    /* background-color: aqua; */
   }
   .chain {
     width: 100%;
     height: 100%;
-    /* background-color: #832729; */
-    background-image: url(./Assets/Images/chain.jpg);
+    background-color: #832729;
+    background-image: url("/project/Assets/Images/chain.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
