--- a/Assets/Css/index.css
+++ b/Assets/Css/index.css
@@ -2801,7 +2801,7 @@ h2 {
   .chain {
     width: 100%;
     height: 100%;
-    background-color: #832729;
+    /* background-color: #832729; */
     background-image: url("/project/Assets/Images/chain.jpg");
     background-position: center;
     background-size: cover;
