--- a/Assets/Css/index.css
+++ b/Assets/Css/index.css
@@ -9,6 +9,10 @@ body {
   overflow-x: hidden;
   background-color: rgb(238, 241, 238);
 }
+html {
+  overflow-x: hidden;
+  /* scroll-behavior:  o; */
+}
 .loginbar {
   width: 100%;
   height: 5%;
